--- a/src/index.css
+++ b/src/index.css
@@ -21,15 +21,15 @@ body {
     background: #fff;
     border: 1px solid #999;
     float: left;
-    font-size: 24px;
+    font-size: 40px;
     font-weight: bold;
     line-height: 34px;
-    height: 34px;
+    height: 100px;
     margin-right: -1px;
     margin-top: -1px;
     padding: 0;
     text-align: center;
-    width: 34px;
+    width: 100px;
   }
   
   .square:focus {
@@ -41,11 +41,15 @@ body {
   }
   
   .game {
-    display: flex;
+    display: flex;  
     flex-direction: row;
+    height:100vh;
   }
   
   .game-info {
     margin-left: 20px;
   }
   
+  .game-board {
+    margin: auto;
+  }
